--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     width: 80%;
     max-width: 1200px;
     height: 100vh;
-    background: url('background.jpg') no-repeat center center;
+    background: url('https://png.pngtree.com/thumb_back/fh260/background/20230325/pngtree-wedding-flowers-champagne-color-background-image_2104747.jpg') no-repeat center center;
     background-size: cover;
 }
 
