--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.google.com/share?selection.family=Dancing+Script:wght@400..700&display=swap');
+
+
 * {
     margin: 0;
     padding: 0;
@@ -6,48 +9,38 @@
 
 html, body {
     height: 100%;
-    font-family: Arial, sans-serif;
+    font-family: Dancing Script, sans-serif;
+    margin: 0;
 }
 
 body {
-    position: relative;
-    background: url('https://png.pngtree.com/thumb_back/fh260/background/20230325/pngtree-wedding-flowers-champagne-color-background-image_2104747.jpg') no-repeat center center fixed;
+    background: url('src/bg.gif') no-repeat center center fixed;
     background-size: cover;
 }
 
-body::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5); /* Change the color and opacity here */
-    z-index: 1;
+.overlay {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.3); /* Overlay for better text visibility */
 }
 
-.container-fluid {
-    position: relative;
-    height: 100%;
-    z-index: 2; /* Ensure the content is above the overlay */
-}
-
-.text-content {
-    color: white;
-    padding: 20px;
-    z-index: 2; /* Content stays above overlay */
-}
-
-.custom-img {
-    max-height: 80vh;
-    width: auto;
-    border-radius: 10px;
-    z-index: 2;
+.countdown-container {
+    text-align: center;
+    color: #9a2462;
+    margin-bottom: 40%;
 }
 
 .countdown-timer {
-    font-size: 2rem;
+    font-size: 4rem;
     font-weight: bold;
-    color: white;
-    z-index: 2;
+    margin-top: 20px;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    .countdown-timer {
+        font-size: 2rem;
+    }
 }
